--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,12 +6,10 @@
         "module": "es6",
         "target": "es5",
         "allowJs": true,
-        "jsx": "react",
+        "jsx": "react-jsx",
         "moduleResolution": "node"
     },
-    "include": [
-        "src"
-    ],
+    "include": ["src"],
     "ts-node": {
         "compilerOptions": {
             "module": "CommonJS"
