--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -82,7 +82,7 @@ jobs:
                   echo "## v${{ env.VERSION }} - $(date '+%Y-%m-%d')" > temp.md
                   git config user.name "github-actions"
                   git config user.email "github-actions@github.com"
-                  git add CHANGELOG.md
+                  git add .
                   git commit -m "docs: update changelog for v${{ env.VERSION }}"
 
                   # Пушим изменения в новую ветку
