--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -78,15 +78,21 @@ jobs:
                   # Создаём новую ветку
                   git checkout -b changelog-update
 
-                  # Делаем изменения в CHANGELOG.md
+                  # Генерируем содержимое release.md или temp.md
                   echo "## v${{ env.VERSION }} - $(date '+%Y-%m-%d')" > temp.md
-                  git config user.name "github-actions"
-                  git config user.email "github-actions@github.com"
-                  git add .
+
+                  # Добавляем файлы в индекс Git
+                  git add CHANGELOG.md
+                  git add release.md
+                  git add temp.md
+
+                  # Делаем коммит
                   git commit -m "docs: update changelog for v${{ env.VERSION }}"
 
                   # Пушим изменения в новую ветку
                   git push origin changelog-update
 
-                  # Создаём pull request через API
+                  # Создаём pull request через GitHub CLI
                   gh pr create --title "Update changelog for v${{ env.VERSION }}" --body "Automated changelog update" --base main --head changelog-update
+              env:
+                  GH_TOKEN: ${{ github.token }}
