--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -81,6 +81,9 @@ jobs:
                   # Генерируем содержимое release.md или temp.md
                   echo "## v${{ env.VERSION }} - $(date '+%Y-%m-%d')" > temp.md
 
+                  git config user.name "github-actions"
+                  git config user.email "github-actions@github.com"
+
                   # Добавляем файлы в индекс Git
                   git add CHANGELOG.md
                   git add release.md
