--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -103,6 +103,6 @@ jobs:
 
                   mv temp.md CHANGELOG.md
 
-                  git add CHANGELOG.md
+                  git add .
                   git commit -m "docs: update changelog for $NEW_VERSION"
                   git push origin releases/${VERSION}
