added fetch-depth for tags and logs

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -74,6 +74,8 @@ jobs:
                   content-filepath: ./release.md
 
             - name: Обновление CHANGELOG.md
+              with:
+                  fetch-depth: 0
               run: |
                   git checkout releases/${VERSION}
                   git pull origin releases/${VERSION}
