--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -5,7 +5,7 @@ on:
 
 jobs:
     release:
-        runs-on: ubuntu-latest
+        runs-on: ubuntu:20.04
         env:
             VERSION: ${{ github.run_number }}
 
