--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,10 +23,10 @@ jobs:
               run: |
                   ssh -o StrictHostKeyChecking=no ${{ secrets.SERVER_USER }}@${{ secrets.PROD_SERVER_IP }} <<EOF
                     docker login -u ${{ secrets.YCR_USERNAME }} -p ${{ secrets.YCR_PASSWORD }} cr.yandex
-                    docker pull cr.yandex/${{ secrets.YCR_REGISTRY_ID }}/shri-infra:${VERSION}_latest
-                    docker stop shri-infra || true
-                    docker rm shri-infra || true
-                    docker run -d -p 3000:3000 --name shri-infra cr.yandex/${{ secrets.YCR_REGISTRY_ID }}/shri-infra:${VERSION}_latest
+                    docker pull cr.yandex/${{ secrets.YCR_REGISTRY_ID }}/app:${VERSION}_latest
+                    docker stop app || true
+                    docker rm app || true
+                    docker run -d -p 3000:3000 --name app cr.yandex/${{ secrets.YCR_REGISTRY_ID }}/app:${VERSION}_latest
                   EOF
 
             - name: Отметка в Issue
