--- a/.github/workflows/fix-release.yml
+++ b/.github/workflows/fix-release.yml
@@ -44,3 +44,39 @@ jobs:
               run: |
                   git tag v${VERSION}_fix${FIX_ID}
                   git push origin v${VERSION}_fix${FIX_ID}
+
+            - name: Формирование issue с описанием фикса
+              run: |
+                  DATE=$(date '+%Y-%m-%d')
+                  VERSION="v${{ env.VERSION }}"
+                  FIX_ID="${{ env.FIX_ID }}"
+                  AUTHOR="${{ github.actor }}"
+                  DOCKER_TAG="cr.yandex/${{ secrets.YCR_REGISTRY_ID }}/app:${VERSION}_fix${FIX_ID}"
+
+                  # Определение предыдущего тега
+                  PREV_TAG=$(git describe --tags --abbrev=0 2>/dev/null || echo "")
+
+                  # Получение списка коммитов
+                  if [ -z "$PREV_TAG" ]; then
+                    COMMITS=$(git log --pretty=format:'- %h %s')
+                  else
+                    COMMITS=$(git log --pretty=format:'- %h %s' $PREV_TAG..HEAD)
+                  fi
+
+                  # Сборка текста issue
+                  {
+                    echo "## 🛠 Фикс релиза ${VERSION}_fix${FIX_ID}"
+                    echo ""
+                    echo "**📅 Дата:** $DATE"
+                    echo "**👤 Автор:** $AUTHOR"
+                    echo "**🐳 Docker-образ:** \`$DOCKER_TAG\`"
+                    echo ""
+                    echo "**📄 Коммиты с момента тега \`$PREV_TAG\`:**"
+                    echo "$COMMITS"
+                  } > fix.md
+
+            - name: Создание Issue о фиксе
+              uses: peter-evans/create-issue-from-file@v4
+              with:
+                  title: "Fix Release ${{ env.VERSION }}_fix${{ env.FIX_ID }}"
+                  content-filepath: ./fix.md
