--- a/.github/workflows/fix-release.yml
+++ b/.github/workflows/fix-release.yml
@@ -53,17 +53,19 @@ jobs:
                   AUTHOR="${{ github.actor }}"
                   DOCKER_TAG="cr.yandex/${{ secrets.YCR_REGISTRY_ID }}/app:${VERSION}_fix${FIX_ID}"
 
-                  # Определение предыдущего тега
-                  PREV_TAG=$(git describe --tags --abbrev=0 2>/dev/null || echo "")
+                  # Получение предыдущего релевантного тега
+                  PREV_TAG=$(git tag --sort=-creatordate | grep -E "^v${VERSION}(_fix[0-9]+)?$" | sed -n '2p')
 
-                  # Получение списка коммитов
+                  # Получение коммитов
                   if [ -z "$PREV_TAG" ]; then
-                    COMMITS=$(git log --pretty=format:'- %h %s')
+                    echo "Предыдущий тег не найден, берем все коммиты"
+                    git log --pretty=format:'- %h %s' > fix_commits.txt
                   else
-                    COMMITS=$(git log --pretty=format:'- %h %s' $PREV_TAG..HEAD)
+                    echo "Предыдущий тег: $PREV_TAG"
+                    git log --pretty=format:'- %h %s' $PREV_TAG..HEAD > fix_commits.txt
                   fi
 
-                  # Сборка текста issue
+                  # Формирование текста issue
                   {
                     echo "## 🛠 Фикс релиза ${VERSION}_fix${FIX_ID}"
                     echo ""
@@ -71,8 +73,8 @@ jobs:
                     echo "**👤 Автор:** $AUTHOR"
                     echo "**🐳 Docker-образ:** \`$DOCKER_TAG\`"
                     echo ""
-                    echo "**📄 Коммиты с момента тега \`$PREV_TAG\`:**"
-                    echo "$COMMITS"
+                    echo "**📄 Коммиты с момента тега \`${PREV_TAG:-N/A}\`:**"
+                    cat fix_commits.txt
                   } > fix.md
 
             - name: Создание Issue о фиксе
